// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dropdown with Default style and not showSearch correctly 1`] = `
<div>
  <button
    className="dropdownToggle  "
    data-testid="dropdown-button"
    disabled={false}
    onClick={[Function]}
    title="Choose an option"
  >
    <div
      className="d-inline-block"
      data-testid="display-text"
    >
      Placeholder text
       
    </div>
    <svg
      aria-labelledby="eds-arrow_drop_down-8"
      className="sc-idOhPF bqIcIz float-right"
      fill="#007079"
      height="24px"
      name={null}
      role="img"
      title="Choose options"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="eds-arrow_drop_down-8"
      >
        Choose options
      </title>
      <path
        className="sc-dIUggk"
        clipRule="evenodd"
        d="M7 9.5l5 5 5-5H7z"
        data-testid="eds-icon-path"
        fillRule="evenodd"
        height="24"
        size={null}
        transform={null}
      />
    </svg>
  </button>
  <div
    className="dropdown"
    data-testid="dropdown-content"
    style={
      Object {
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="filteredDataList"
    />
  </div>
</div>
`;

exports[`renders dropdown with Home style and showSearch correctly 1`] = `
<div>
  <button
    className="dropdownToggleHome  "
    data-testid="dropdown-button"
    disabled={false}
    onClick={[Function]}
    title="Choose an option"
  >
    <div
      className="d-inline-block"
      data-testid="display-text"
    >
      Placeholder text
       
    </div>
    <svg
      aria-labelledby="eds-arrow_drop_down-4"
      className="sc-idOhPF bqIcIz float-right"
      fill="#007079"
      height="24px"
      name={null}
      role="img"
      title="Choose options"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="eds-arrow_drop_down-4"
      >
        Choose options
      </title>
      <path
        className="sc-dIUggk"
        clipRule="evenodd"
        d="M7 9.5l5 5 5-5H7z"
        data-testid="eds-icon-path"
        fillRule="evenodd"
        height="24"
        size={null}
        transform={null}
      />
    </svg>
  </button>
  <div
    className="dropdown"
    data-testid="dropdown-content"
    style={
      Object {
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="searchWrapper"
    >
      <span
        className="sc-iNqMTl khZVTf"
        disabled={false}
        onClick={[Function]}
        role="search"
      >
        <svg
          aria-labelledby="eds-search-5"
          className="sc-idOhPF bqIcIz"
          fill="currentColor"
          height="16px"
          name={null}
          role="img"
          title="search icon"
          viewBox="0 0 16 16"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-search-5"
          >
            search icon
          </title>
          <path
            className="sc-dIUggk"
            clipRule="evenodd"
            d="M14.966 14.255h.79l4.99 5-1.49 1.49-5-4.99v-.79l-.27-.28a6.471 6.471 0 01-4.23 1.57 6.5 6.5 0 116.5-6.5c0 1.61-.59 3.09-1.57 4.23l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform="scale(0.6666666666666666)"
          />
        </svg>
        <input
          aria-label="search input"
          className="sc-jeGSBP fiLlUi"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Search"
          role="searchbox"
          type="search"
          value=""
        />
        <div
          className="sc-eJMQSu iZMuKy"
          onClick={[Function]}
          role="button"
          size={16}
        >
          <svg
            aria-labelledby="eds-close-6"
            className="sc-idOhPF bqIcIz"
            fill="currentColor"
            height="16px"
            name={null}
            role="img"
            title="clear"
            viewBox="0 0 16 16"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="eds-close-6"
            >
              clear
            </title>
            <path
              className="sc-dIUggk"
              clipRule="evenodd"
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
              data-testid="eds-icon-path"
              fillRule="evenodd"
              height="24"
              size={null}
              transform="scale(0.6666666666666666)"
            />
          </svg>
        </div>
      </span>
    </div>
    <div
      className="filteredDataList"
    />
  </div>
</div>
`;
